# feetech_arm_control

./: .gitignore  .gitmodules  LICENSE  README copy.md  README.md  package.xml  setup.cfg
arm_control/: hardware_interface.py  joint_pos_control.py  setup.py
arm_controller/: CMakeLists.txt  package.xml
arm_controller/launch/: ee_goal_control.launch.py
arm_controller/scripts/: gui_goal_pose.py
arm_controller/src/: ee_goal_control.cpp
arm_hardware_interface/: package.xml  setup.cfg  setup.py
arm_hardware_interface/arm_hardware_interface/: hardware_interface.py  joint_pos_control.py
scripts/: 99-feetech-arms.rules  setup_udev.sh
